--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^7.24.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
