--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,12 @@
   },
   "main": "index.js",
   "dependencies": {
+    "busboy": "^0.3.1",
     "express": "^4.17.1",
     "firebase": "^7.24.0",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
